--- a/templates/base.html
+++ b/templates/base.html
@@ -105,13 +105,22 @@
                 </ul>
                 
                 <div class="d-flex">
-                    <a href="#" class="btn btn-login me-2">
-                        <i class="fas fa-sign-in"></i> Войти
-                    </a>
-                    <a href="#" class="btn btn-register">
-                        <i class="fas fa-user-plus"></i> Регистрация
-                    </a>
-                </div>
+    {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}" class="btn btn-outline-primary me-2">
+            <i class="fas fa-user"></i> {{ user.username }}
+        </a>
+        <a href="{% url 'logout' %}" class="btn btn-outline-secondary">
+            <i class="fas fa-sign-out-alt"></i> Выйти
+        </a>
+    {% else %}
+        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
+            <i class="fas fa-sign-in"></i> Авторизация
+        </a>
+        <a href="{% url 'register' %}" class="btn btn-primary">
+            <i class="fas fa-user-plus"></i> Регистрация
+        </a>
+    {% endif %}
+</div>
             </div>
         </div>
     </nav>
