--- a/templates/base.html
+++ b/templates/base.html
@@ -113,19 +113,27 @@
                 
                 <div class="d-flex align-items-center">
                     {% if user.is_authenticated %}
-                        <a href="{% url 'profile' %}" class="btn btn-outline-primary me-2">
-                             {{ user.username }}
-                        </a>
-                        <a href="{% url 'logout' %}" class="btn btn-outline-secondary">
-                             Выйти
-                        </a>
+                    <a href="{% url 'cart' %}" class="btn btn-outline-primary me-2 position-relative">
+                        <i class="fas fa-shopping-cart"></i> Корзина
+                        {% if user.cart.get_total_quantity > 0 %}
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            {{ user.cart.get_total_quantity }}
+                        </span>
+                        {% endif %}
+                    </a>
+                    <a href="{% url 'profile' %}" class="btn btn-outline-primary me-2">
+                        {{ user.username }}
+                    </a>
+                    <a href="{% url 'logout' %}" class="btn btn-outline-secondary">
+                        Выйти
+                    </a>
                     {% else %}
-                        <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
-                             Войти
-                        </a>
-                        <a href="{% url 'register' %}" class="btn btn-primary">
-                             Регистрация
-                        </a>
+                    <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">
+                        Войти
+                    </a>
+                    <a href="{% url 'register' %}" class="btn btn-primary">
+                        Регистрация
+                    </a>
                     {% endif %}
                 </div>
             </div>
